--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>SHMOFY</title>
 </head>
 
 <body>
